# multiphysics-peridynamics

./: .gitignore  CMakeLists.txt  LICENSE  README.md  analyze.ipynb
cmake/: FindLibMesh.cmake  FindPetsc.cmake
examples/ex1/: main.cpp
examples/ex2/: main.cpp
src/: bc.h  crack.h  fracture.h  geometry.h  heat_source.h  influenceFn.h  io.h  json.h  libmesh_includes.h  loading.h  material.h  materialDeck.h  mpi_communicator.cpp  mpi_communicator.h  thermomechanical_model.cpp  thermomechanical_model.h  util.h
